--- a/options.html
+++ b/options.html
@@ -19,45 +19,45 @@
       <div class="row cf">
         <h3>Search</h3>
       </div>
-      <div name='searchType' data-type='radiogroup' type class="radio-group">
-        <div class="row cf">
-          <div class="column">
-            <div id="radio-random" name="searchType" data-type="input" class="radio"></div>
-          </div>
-          <div class="column">
-            <div>
-              <label for="radio-random">Random</label>
-            </div>
-          </div>
-        </div>
-        <div class="row cf">
-          <div class="column">
-            <div id='radio-keyword' name="searchType" data-type="input" class="radio"></div>
-          </div>
-          <div class="column">
-            <label for="radio-keyword">Keyword</label>
-          </div>
-        </div>
-        <div class="row cf">
-          <textarea name="q" data-type="input" id="search-keyword" class="w100"></textarea>
-        </div>
-      </div>
-      <hr/>
       <div class="row cf">
-        <h3>Categories</h3>
+        <div class="column">
+          <div id="checkbox-random" name="searchType" data-type="input" class="checkbox"></div>
+        </div>
+        <div class="column">
+          <div>
+            <label for="checkbox-random">Random</label>
+          </div>
+        </div>
       </div>
-      <div class="row cf" data-enabled-for='radio-keyword'>
+      <div class="row cf">
         <div class="column">
-          <div id="checkbox-general" name="categories" data-type="input" class="checkbox"></div>
+          <div id='checkbox-keyword' name="searchType" data-type="input" class="checkbox"></div>
         </div>
         <div class="column">
-          <label for="checkbox-general">General</label>
+          <label for="checkbox-keyword">With Parameters</label>
         </div>
-        <div class="column">
-          <div id="checkbox-anime" name="categories" data-type="input" class="checkbox"></div>
+      </div>
+      <fieldset>
+       <div class="row cf">
+        <textarea name="q" data-type="input" id="search-keyword" class="w100" placeholder="Enter keyword (e.g. kitten, puppy, galaxy)"></textarea>
+      </div>
+  
+      <div class="row cf" data-disabled-for='radio-specific'>
+        <div class="column third">
+          <div class="column">
+            <div id="checkbox-general" name="categories" data-type="input" class="checkbox"></div>
+          </div>
+          <div class="column">
+            <label for="checkbox-general">General</label>
+          </div>
         </div>
-        <div class="column">
-          <label for="checkbox-anime">Anime</label>
+        <div class="column third">
+          <div class="column">
+            <div id="checkbox-anime" name="categories" data-type="input" class="checkbox"></div>
+          </div>
+          <div class="column">
+            <label for="checkbox-anime">Anime</label>
+          </div>
         </div>
         <div class="column">
           <div id="checkbox-people" name="categories" data-type="input" class="checkbox"></div>
@@ -66,11 +66,8 @@
           <label for="checkbox-people">People</label>
         </div>
       </div>
-      <hr/>
-      <div class="row cf">
-        <h3>Purity</h3>
-      </div>
-      <div class="row cf" data-enabled-for='radio-keyword'>
+
+      <div class="row cf" data-disabled-for='radio-specific'>
         <div class="column">
           <div id="checkbox-sfw" name="purity" data-type="input" class="checkbox"></div>
         </div>
@@ -89,11 +86,12 @@
         <div class="column">
           <label for="checkbox-nsfw">NSFW*</label>
         </div>
-      </div>
+      </div> 
+      </fieldset>
+      
       <div class="row cf">
-        <span class="note">(* Wallhaven login required )</span>
+        <span class="note">(* Wallhaven login required <a href="http://alpha.wallhaven.cc" target="_blank">alpha.wallhaven.cc</a> )</span>
       </div>
-      <hr/>
       <div class="row cf">
         <div class="column">
           <button disabled id="save">Save</button>
@@ -102,7 +100,7 @@
           <button class="light" id="cancel">Cancel</button>
         </div>
         <div class="column">
-          <button class="lighter" id="set-to-default">Set to default</button>
+          <button class="lighter" id="set-to-default" data-confirm="Set to default?">Set to default</button>
         </div>
       </div>
     </div>
