add display results of file reader

--- a/options.html
+++ b/options.html
@@ -63,7 +63,7 @@
                 <div id='checkbox-withParameters' name="withParameters" data-type="input" class="checkbox"></div>
               </div>
               <div class="column">
-                <label for="checkbox-withParameters">With Parameters</label>
+                <label for="checkbox-withParameters">Custom</label>
               </div>
             </div>
             <fieldset data-enabled-for="checkbox-withParameters">
