add gitignore, add preview images

--- a/options.html
+++ b/options.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="row cf">
-    <div class="column w50" style="border-right: 1px solid gray;">
+    <div class="column w50 fixed">
       <div class="container">
         <div id="searchForm" class="form">
           <div class="row cf">
@@ -178,8 +178,11 @@
         </div>
       </div>
     </div>
-    <div class="column w50">
+    <div class="column w50 off50">
       <div class="row cf">
+        <div id="imagesTitle" class="row cf">
+          <h3>Images</h3>
+        </div>
         <div id="image-results">
 
         </div>
