--- a/src/browser_action/popup.html
+++ b/src/browser_action/popup.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-  <script src='common.js'></script>
-  <script src='jquery-1.11.1.js'></script>
-  <script src='jquery-ui.min.js'></script>
+  <script src='../common.js'></script>
+  <script src='../../js/jquery-1.11.1.js'></script>
+  <script src='../../js/jquery-ui.min.js'></script>
   <script src='popup.js'></script>
-  <link rel="stylesheet" href="common.css">
-  <link rel="stylesheet" href="popup.css">
-  <link rel="stylesheet" href="jquery-ui.min.css">
-  <link rel="stylesheet" href="jquery-ui.structure.min.css">
-  <link rel="stylesheet" href="jquery-ui.theme.min.css">
+  <link rel="stylesheet" href="/css/common.css">
+  <link rel="stylesheet" href="/css/popup.css">
+  <link rel="stylesheet" href="/css/jquery-ui.min.css">
+  <link rel="stylesheet" href="/css/jquery-ui.structure.min.css">
+  <link rel="stylesheet" href="/css/jquery-ui.theme.min.css">
 </head>
 <body>
   <div class="container">
