--- a/src/options.html
+++ b/src/options.html
@@ -1,11 +1,11 @@
-<html>
+<!doctype html>
 <head>
   <title>SiteBG Setter Options</title>
-  <script src='jquery-1.11.1.js'></script>
+  <script src='../js/jquery-1.11.1.js'></script>
   <script src='options.js'></script>
   <script src='common.js'></script>
-  <link rel="stylesheet" href="common.css">
-  <link rel="stylesheet" href="options.css">
+  <link rel="stylesheet" href="../css/common.css">
+  <link rel="stylesheet" href="../css/options.css">
 </head>
 <body>
   <div id="loader" class="loader centered" style="display: none">
